[package]
name = "starbypass"
version = "0.1.0"
edition = "2024"
description = "Automates connecting to Starbucks Wi-Fi captive portals"
license = "MIT"
repository = "https://github.com/junjitree/starbypass"
readme = "README.md"
keywords = ["starbucks", "wifi", "captive-portal", "automation"]
categories = ["command-line-utilities"]

[dependencies]
thirtyfour = "0.36.1"
tokio = { version = "1.50.0", features = ["full"] }
